@@ -621,6 +621,8 @@ configuration.
 
 =back
 
+This mode is deprecated.
+
 =item v10
 
 Changes from v9 are:
