@@ -14,7 +14,7 @@ use constant {
 	'MIN_COMPAT_LEVEL' => 5,
 	# Lowest compat level that does *not* cause deprecation
 	# warnings
-	'LOWEST_NON_DEPRECATED_COMPAT_LEVEL' => 9,
+	'LOWEST_NON_DEPRECATED_COMPAT_LEVEL' => 10,
 	# Lowest compat level to generate "debhelper-compat (= X)"
 	# relations for.
 	'LOWEST_VIRTUAL_DEBHELPER_COMPAT_LEVEL' => 9,
