@@ -3,6 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Test <testing@nowhere>
 Standards-Version: 3.8.1
+Build-Depends: debhelper-compat (= 12)
 Rules-Requires-Root: no
 
 Package: testpackage
