@@ -2,6 +2,8 @@ debhelper (12.10.1) UNRELEASED; urgency=medium
 
   * debian/changelog: Fix typo of a bug number in the 12.10
     entry.  Thanks to Andy Caldwell for reporting it.
+  * Dh_Lib.pm: Flag compat 9 as deprecated as announced in
+    https://lists.debian.org/debian-devel-announce/2020/02/msg00000.html
 
  -- Niels Thykier <niels@thykier.net>  Wed, 25 Mar 2020 18:28:58 +0000
 
